--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "fallenknight85/php-api-wrapper",
+  "name": "cristal/php-api-wrapper",
   "description": "Work with APIs like with Laravel Eloquent or Doctrine (no longer a dream)",
   "type": "package",
   "authors": [
